# mrsf

./: .env.example  .gitignore  BASELINE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PERFORMANCE.md  PYPI_PUBLISH_GUIDE.md  README.md  REFACTOR_SUMMARY.md  SECURITY.md  TEST_RESULTS.md  example_openai.py  example_performance.py  final_test.py  mkdocs.yml  pyproject.toml  test_async_cache.py  test_async_properly.py  test_full_functionality.py  test_probe_checklist.py  test_providers.py  update_version.py  verify_deep.py  verify_probe_complete.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: CONCURRENCY.md  MIGRATION.md  api.md  index.md
docs/cookbook/: 01_rag_pipeline.md  02_novelty_detection.md  03_chunk_quality_audit.md
pymrsf/: __init__.py  cache.py  chunker.py  cli.py  core.py  embeddings.py  probe.py  rag.py
pymrsf/experimental/: __init__.py  benchmark.py  inspect.py  storage.py
tests/: test_async.py  test_cache.py  test_cache_perf.py  test_integration.py  test_storage.py
tests/experimental/: test_roundtrip.py
