[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymrsf"
version = "0.4.1"
description = "Novelty-Aware RAG scoring — Filter chunks by information gain, not just relevance"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Eric Monthe"}]
requires-python = ">=3.9"
keywords = ["rag", "llm", "novelty", "embeddings", "retrieval", "semantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    "msgpack>=1.0.0",
    "requests>=2.31.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "hypothesis>=6.0"]
local = ["llama-cpp-python>=0.2.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
all = ["llama-cpp-python>=0.2.0", "openai>=1.0.0", "anthropic>=0.18.0"]

[project.scripts]
pymrsf = "pymrsf.cli:main"

[project.urls]
Homepage = "https://github.com/riiseup08/mrsf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow (deselect with -m 'not slow')"]

[tool.hatch.build.targets.wheel]
packages = ["pymrsf"]
[tool.hatch.build]
exclude = [
    "*.db",
    "*.faiss",
    "*.faiss.meta",
    "*.tar.gz",
    "*.log",
    "*.csv",
    "*.gguf",
    "models/",
    "canterbury/",
    "dist/",
    "venv/",
    "__pycache__/",
]
